Foods needs tea

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="text-sm text-gray-600 leading-6 mb-3 w-3/6">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et orci ac eros elementum egestas ac non nibh quisque.dolor sit amet, consectetur adipiscing elit.
             </p>
-            <a href="#" class="inline-block bg-[#384956] text-white no-underline w-50 text-lg font-bold py-2 px-4 rounded">DOWNLOAD NOW</a>
+            <a href="#" class="inline-block bg-[#384956] text-white no-underline w-50 text-xl font-bold py-2 px-4 rounded">Order Now →</a>
           </td>
           <td class="w-1/4 rounded-lg overflow-hidden">
             <img src="./logo/15ab8137e7b4730a9ec36e3170a73ac2.jpg" alt="Devices displaying newsletters" class="w-full h-auto block">
@@ -203,10 +203,10 @@
           <img src="./logo/Logo-l.png" alt="Company Logo" class="ml-3 w-12 h-auto mb-2">         
         </div>
         <dov class="flex">
-        <a href="#"><img src="./logo/facebook.jpg" alt="Facebook" class="w-5 h-auto ml-262"></a>
-        <a href="#"><img src="./logo/tiwter.png" alt="Twitter" class="w-5 h-auto ml-4"></a> 
-        <a href="#"><img src="./logo/insta.jpg" alt="Instagram" class="w-5 h-auto ml-4"></a>
-        <a href="#"><img src="./logo/rss.png" alt="RSS" class="w-5 h-auto ml-4"></a> 
+        <a href="#"><img src="./logo/facebook-removebg-preview.png" alt="Facebook" class="w-5 h-auto ml-262"></a>
+        <a href="#"><img src="./logo/tiwter-removebg-preview.png" alt="Twitter" class="w-5 h-auto ml-4"></a> 
+        <a href="#"><img src="./logo/insta-removebg-preview.png" alt="Instagram" class="w-5 h-auto ml-4"></a>
+        <a href="#"><img src="./logo/rss-removebg-preview.png" alt="RSS" class="w-5 h-auto ml-4"></a> 
         </dov>
       </section>
       <section class="flex mt-3">
